--- a/src/app/modules/admin/station-details/components/log-history-tab/log-history-tab.component.html
+++ b/src/app/modules/admin/station-details/components/log-history-tab/log-history-tab.component.html
@@ -1,5 +1,5 @@
 <div class="log-history-list">
-  <div class="log-history-card" *ngFor="let log of logs">
+  <div class="log-history-card" *ngFor="let log of logHistory">
     <div class="log-avatar">
       <img *ngIf="log.userAvatar; else defaultAvatar" [src]="log.userAvatar" alt="avatar" />
       <ng-template #defaultAvatar>
@@ -9,12 +9,12 @@
       </ng-template>
     </div>
     <div class="log-content">
-      <div class="log-name">{{ log.userName }}</div>
-      <div class="log-message">{{ log.message }}</div>
+      <div class="log-name">{{ log.user_name }}</div>
+      <div class="log-message">{{ log.change_details }}</div>
     </div>
-    <span class="log-status" [ngClass]="log.status.toLowerCase()">{{ log.status }}</span>
+    <span class="log-status" [ngClass]="log.change_type.toLowerCase()">{{ log.change_type }}</span>
     <div class="log-date">
-      <span>{{ log.date }} , {{ log.time }}</span>
+      <span>{{log.created_at | date: 'd MMM y, h:mm a'}}</span>
     </div>
   </div>
 </div>
