--- a/src/app/modules/admin/station-details/station-details.component.scss
+++ b/src/app/modules/admin/station-details/station-details.component.scss
@@ -469,3 +469,30 @@ swiper-slide img {
   height: 100%;
   object-fit: cover;
 }
+
+// Swiper custom pagination bullets
+:host ::ng-deep .swiper-pagination-bullets {
+  bottom: 12px !important;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
+:host ::ng-deep .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  border-radius: 8px;
+  background: #fff;
+  opacity: 1;
+  transition: background 0.3s, width 0.3s;
+  margin: 0 2px !important;
+  box-shadow: 0 1px 4px 0 rgba(16, 30, 54, 0.08);
+}
+
+:host ::ng-deep .swiper-pagination-bullet-active {
+  background: #27c281;
+  width: 32px;
+}
