--- a/src/app/modules/admin/example/example.component.scss
+++ b/src/app/modules/admin/example/example.component.scss
@@ -212,7 +212,7 @@ google-map {
   font-size: 0.98rem;
   font-weight: 500;
   border-radius: 20px;
-  padding: 0.35em 1.1em;
+  padding: 12px 16px;
   margin-bottom: 0.3em;
   box-shadow: 0 1px 2px rgba(0,0,0,0.03);
 }
