--- a/src/app/modules/admin/station-details/station-details.component.html
+++ b/src/app/modules/admin/station-details/station-details.component.html
@@ -123,7 +123,7 @@
                 <div class="station-actions">
                     <mat-slide-toggle
                         color="primary"
-                        [(ngModel)]="station.is_open"
+                        [(ngModel)]="station.is_active"
                     ></mat-slide-toggle>
                     <div class="rating">
                         <mat-icon color="warn">star</mat-icon>
